# A-tiltmeter-based-on-MPU6050

./: readme.md
src/Tiltmeter/applications/BearPi/BearPi-HM_Nano/sample/: BUILD.gn
src/Tiltmeter/applications/BearPi/BearPi-HM_Nano/sample/C4_e53_sc2_axis/: BUILD.gn  e53_sc2_example.c
src/Tiltmeter/applications/BearPi/BearPi-HM_Nano/sample/C4_e53_sc2_axis/include/: E53_SC2.h
src/Tiltmeter/applications/BearPi/BearPi-HM_Nano/sample/C4_e53_sc2_axis/src/: E53_SC2.c
src/Tiltmeter/base/hiviewdfx/frameworks/hievent_lite/: hiview_event.c  hiview_output_event.c
src/Tiltmeter/base/security/frameworks/huks_lite/: BUILD.gn
src/Tiltmeter/base/security/services/iam_lite/: BUILD.gn
src/Tiltmeter/base/startup/services/appspawn_lite/: BUILD.gn
src/Tiltmeter/base/startup/services/init_lite/: BUILD.gn
src/Tiltmeter/domains/iot/link/demolink/: BUILD.gn  demosdk_adapter.c
src/Tiltmeter/drivers/liteos/: BUILD.gn
src/Tiltmeter/drivers/liteos/mem/: BUILD.gn
src/Tiltmeter/drivers/liteos/video/: BUILD.gn
src/Tiltmeter/foundation/aafwk/frameworks/want_lite/: BUILD.gn
src/Tiltmeter/foundation/aafwk/services/abilitymgr_lite/: BUILD.gn
src/Tiltmeter/foundation/ace/frameworks/lite/: .clang-format
src/Tiltmeter/foundation/appexecfwk/frameworks/bundle_lite/: BUILD.gn
src/Tiltmeter/foundation/distributedschedule/services/safwk_lite/: BUILD.gn
src/Tiltmeter/foundation/graphic/lite/utils/: BUILD.gn
src/Tiltmeter/foundation/multimedia/frameworks/audio_lite/: BUILD.gn
src/Tiltmeter/foundation/multimedia/frameworks/camera_lite/: BUILD.gn  camera_ability.cpp  camera_config.cpp  camera_device.cpp  camera_impl.cpp  camera_kit.cpp  camera_manager.cpp  camera_service.cpp  event_handler.cpp  frame_config.cpp
src/Tiltmeter/foundation/multimedia/frameworks/player_lite/: BUILD.gn
src/Tiltmeter/foundation/multimedia/frameworks/recorder_lite/: BUILD.gn
src/Tiltmeter/foundation/multimedia/services/media_lite/: BUILD.gn  media_main.cpp
src/Tiltmeter/foundation/multimedia/utils/lite/: BUILD.gn
src/Tiltmeter/test/developertest/: start.bat
(+90 files in other folders)
